# Build 5.8.1 Release ?/?/2013
   1. QuestManager "STEP"ping feature now supports "STEP AUTO" to have steps proceed based on duration instead of MOBPROG triggers.
   2. Areas and Rooms now support "atmosphere" to designate what players have available for breathing.
   3. Rooms "climate" is now an editable feature, usually inherited from the area Climate, but modifiable at will.
   4. Races now designate what sort of resource they can breathe, which means GenRaces have a new field you can edit.
   5. New Archon command: JCONSOLE, for playing around with javascript commands (and accessing your muds running systems!!)
   6. New Forum features: All Forums Search, and better threading for all searches.
   7. Can now disable CharStats (attribute) display
   8. New WebMacros: IsDisabled, CatalogCatNext
   9. New Artisan skills: Master Drilling, M. Farming, M. Fishing, M. Foraging, M. Mining, M. Shearing, M. Chopping, M. Butchering
  10. More New Artisan Skills: Master Cooking, M. FoodPrep, M. Baking, M. Distilling -- make more than one dish at a time!
  11. Split command will now double as GET [AMOUNT] from [BUNDLE] (kept getting requests to add a split command, though GET worked).
  12. And yet more Artisan Goodness: Animal Husbandry -- lots of race baby naming and aging-system tweaking behind this simple funness.
  13. Crafting Skill owners can now LIST ALL to see what recipes are coming down the road.
  14. Catalog items and mobs can now be flagged in categories (does not change the global unique name rule). 
  15. Catalog items and mobs can now be accessed via the VFS at /resources/catalog/mobs/.. and /resources/catalog/items/.. as CMARE files.
  16. Some new multiclassing system options:  NO-BASE, NO-SUBONLY, NO-[X], and NO-GRP-[X] -- see the coffeemud.ini
  17. SHELL command now (finally) supports diff (thanks google code!).  
  18. Similar to #15, the entire world map, w/ cmare files, is in VFS at /resources/map/... along with editable properties files.