@@ -222,6 +222,7 @@ ALTER TABLE CMROOM
 CREATE TABLE CMQUESTS (
 	CMQUESID char (50) NULL ,
 	CMQUTYPE char (50) NULL ,
+	CMQFLAGS int NULL ,
 	CMQSCRPT text NULL ,
 	CMQWINNS text NULL
 );
