@@ -162,6 +162,7 @@ PRIMARY KEY (CMROID)
 CREATE TABLE CMQUESTS (
 CMQUESID varchar (50),
 CMQUTYPE varchar (50) NULL,
+CMQFLAGS integer NULL ,
 CMQSCRPT memo NULL,
 CMQWINNS memo NULL,
 PRIMARY KEY (CMQUESID)
