@@ -149,6 +149,7 @@ PRIMARY KEY (CMROID)
 CREATE TABLE CMQUESTS (
 CMQUESID varchar (50) NOT NULL,
 CMQUTYPE varchar (50),
+CMQFLAGS integer ,
 CMQSCRPT CLOB,
 CMQWINNS CLOB,
 PRIMARY KEY (CMQUESID)
