@@ -160,6 +160,7 @@ PRIMARY KEY (CMROID)
 CREATE TABLE CMQUESTS (
 CMQUESID varchar (50),
 CMQUTYPE varchar (50) NULL,
+CMQFLAGS integer NULL ,
 CMQSCRPT LONGVARCHAR NULL,
 CMQWINNS LONGVARCHAR NULL,
 PRIMARY KEY (CMQUESID)
