@@ -162,6 +162,7 @@ PRIMARY KEY (CMROID)
 CREATE TABLE CMQUESTS (
 CMQUESID nvarchar (50),
 CMQUTYPE nvarchar (50) NULL,
+CMQFLAGS integer NULL ,
 CMQSCRPT ntext NULL,
 CMQWINNS ntext NULL,
 PRIMARY KEY (CMQUESID)
