@@ -230,6 +230,7 @@ ALTER TABLE CMROOM
 CREATE TABLE CMQUESTS (
 	CMQUESID varchar (50) NULL ,
 	CMQUTYPE varchar (50) NULL ,
+	CMQFLAGS int NULL ,
 	CMQSCRPT longtext NULL ,
 	CMQWINNS longtext NULL
 );
