@@ -186,6 +186,7 @@ ALTER TABLE CMROOM
 CREATE TABLE CMQUESTS (
 	CMQUESID varchar(50) NOT NULL ,
 	CMQUTYPE varchar(50) NULL ,
+	CMQFLAGS int NULL ,
 	CMQSCRPT text NULL ,
 	CMQWINNS text NULL
 );
