@@ -161,6 +161,7 @@ CREATE TABLE CMROOM (
 CREATE TABLE CMQUESTS (
 	CMQUESID varchar (50)  NOT NULL,
 	CMQUTYPE varchar (50),
+	CMQFLAGS int,
 	CMQSCRPT CLOB,
 	CMQWINNS CLOB ,
 	PRIMARY KEY (CMQUESID)
