@@ -151,6 +151,7 @@ CMTROP integer NULL
 CMQUESTS
 CMQUESID string KEY
 CMQUTYPE string NULL
+CMQFLAGS integer NULL
 CMQSCRPT string NULL
 CMQWINNS string NULL
 
